syntax = "proto3";

import "./post/main.proto";
import "./comment/main.proto";

package blogger;

service Blogger {
  rpc CreatePost(CreatePost) returns (CreatePostResponse);
  rpc LikePost(Like) returns (Status);

  rpc CreateThread(CreateThread) returns (CommentResponse);
  rpc LikeComment(Like) returns (Status);
  rpc CreateComment(CreateComment) returns (CommentResponse);

  rpc GetPost(GetPost) returns (GetPostResponse);
  rpc GetLatestPosts(GetLatestPosts) returns (GetLatestPostsResponse);
  rpc GetFullPost(GetFullPost) returns (GetFullPostResponse);
}

message Status {
  bool success = 1;
  string message = 2;
}

message Like {
  string token = 1;
  string id = 2;
}
